# motortest

./: CMakeLists.txt
motorTest/: motorTest.ino
src/: main.cpp  motorTest.cpp  motorTest.h
